# swagger.json
@@ -5,10 +5,12 @@
     "description": "API for managing movies and users",
     "version": "1.0.0"
   },
-  "host": "final-project-solo.onrender.com",
+  "host": "movie-to-watch-api-k551.onrender.com",
+  
   "basePath": "/",
   "schemes": [
-    "https"
+    "https",
+    "http"
   ],
   "paths": {
     "/movies/": {
@@ -16,12 +18,8 @@
         "tags": ["Movies"],
         "description": "Get all movies",
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "post": {
@@ -34,41 +32,23 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "The Dark Knight"
-                },
-                "genre": {
-                  "example": "Action"
-                },
-                "releaseYear": {
-                  "example": 2008
-                },
-                "duration": {
-                  "example": 152
-                },
+                "title": { "example": "The Dark Knight" },
+                "genre": { "example": "Action" },
+                "releaseYear": { "example": 2008 },
+                "duration": { "example": 152 },
                 "description": {
                   "example": "Batman sets out to dismantle the remaining criminal organizations that plague Gotham City."
                 },
-                "status": {
-                  "example": "completed"
-                },
-                "rating": {
-                  "example": 9
-                }
+                "status": { "example": "completed" },
+                "rating": { "example": 9 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "Movie created successfully"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "Movie created successfully" },
+          "400": { "description": "Bad Request" },
+          "500": { "description": "Internal Server Error" }
         }
       }
     },
@@ -85,15 +65,9 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "put": {
@@ -112,44 +86,24 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "The Dark Knight"
-                },
-                "genre": {
-                  "example": "Action"
-                },
-                "releaseYear": {
-                  "example": 2008
-                },
-                "duration": {
-                  "example": 152
-                },
+                "title": { "example": "The Dark Knight" },
+                "genre": { "example": "Action" },
+                "releaseYear": { "example": 2008 },
+                "duration": { "example": 152 },
                 "description": {
                   "example": "Batman sets out to dismantle the remaining criminal organizations that plague Gotham City."
                 },
-                "status": {
-                  "example": "completed"
-                },
-                "rating": {
-                  "example": 9
-                }
+                "status": { "example": "completed" },
+                "rating": { "example": 9 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "Movie updated successfully"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "Movie updated successfully" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "delete": {
@@ -164,18 +118,10 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "204": { "description": "No Content" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
         }
       }
     },
@@ -184,12 +130,8 @@
         "tags": ["Users"],
         "description": "Get all users",
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "post": {
@@ -202,32 +144,18 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
-                  "example": "moviebuff99"
-                },
-                "password": {
-                  "example": "$2a$10$abc123"
-                },
-                "email": {
-                  "example": "moviebuff99@example.com"
-                },
-                "watchlists": {
-                  "example": []
-                }
+                "username": { "example": "moviebuff99" },
+                "password": { "example": "$2a$10$abc123" },
+                "email": { "example": "moviebuff99@example.com" },
+                "watchlists": { "example": [] }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "User created successfully"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "User created successfully" },
+          "400": { "description": "Bad Request" },
+          "500": { "description": "Internal Server Error" }
         }
       }
     },
@@ -244,15 +172,9 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "put": {
@@ -271,35 +193,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
-                  "example": "moviebuff99"
-                },
-                "password": {
-                  "example": "$2a$10$abc123"
-                },
-                "email": {
-                  "example": "moviebuff99@example.com"
-                },
-                "watchlists": {
-                  "example": []
-                }
+                "username": { "example": "moviebuff99" },
+                "password": { "example": "$2a$10$abc123" },
+                "email": { "example": "moviebuff99@example.com" },
+                "watchlists": { "example": [] }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "User updated successfully"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "delete": {
@@ -314,30 +220,224 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "204": { "description": "No Content" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+    "/reviews/": {
+      "get": {
+        "tags": ["Reviews"],
+        "description": "Get all reviews",
+        "responses": {
+          "200": { "description": "OK" },
+          "500": { "description": "Internal Server Error" }
+        }
+      },
+      "post": {
+        "tags": ["Reviews"],
+        "description": "Create a review",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_id": { "example": "67fd2780e5c52f20916c2cc1" },
+                "movie_id": { "example": "67f24761070e027ef11d2805" },
+                "rating": { "example": "4.5" },
+                "title": { "example": "Incredible Movie!" },
+                "comment": { "example": "Loved every minute of it." }
+              }
+            }
           }
+        ],
+        "responses": {
+          "201": { "description": "Created" },
+          "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+    "/reviews/{id}": {
+      "get": {
+        "tags": ["Reviews"],
+        "description": "Get a review by ID",
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" }
+        ],
+        "responses": {
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
+        }
+      },
+      "put": {
+        "tags": ["Reviews"],
+        "description": "Update a review by ID",
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_id": { "example": "67fd2780e5c52f20916c2cc1" },
+                "movie_id": { "example": "67f24761070e027ef11d2805" },
+                "rating": { "example": "4.5" },
+                "title": { "example": "Updated Title" },
+                "comment": { "example": "Updated comment." }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
+        }
+      },
+      "delete": {
+        "tags": ["Reviews"],
+        "description": "Delete a review by ID",
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" }
+        ],
+        "responses": {
+          "204": { "description": "No Content" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" },
+          "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+    "/watchlists/": {
+          "get": {
+            "tags": ["Watchlists"],
+            "description": "Get all watchlists",
+            "responses": {
+              "200": { "description": "OK" },
+              "500": { "description": "Internal Server Error" }
+            }
+          },
+          "post": {
+            "tags": ["Watchlists"],
+            "description": "Create a watchlist",
+            "parameters": [
+              {
+                "name": "body",
+                "in": "body",
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user_id": { "example": "67fd2780e5c52f20916c2cc1" },
+                    "name": {"example": "Favorites to rewatch"},
+                    "movies": { "example": 
+                                [{"movie_id" : "67f24761070e027ef11d2805",
+                                "status": "Watched"} ] }
+                   
+                  }
+                }
+              }
+            ],
+            "responses": {
+              "201": { "description": "Created" },
+              "400": {"description": "Invalid input data"},
+              "500": { "description": "Internal Server Error" }
+            }
+          }
+    },
+    "/watchlists/{id}": {
+          "get": {
+            "tags": ["Watchlists"],
+            "description": "Get a watchlist by ID",
+            "parameters": [
+              { "name": "id", "in": "path", "required": true, "type": "string" }
+            ],
+            "responses": {
+              "200": { "description": "OK" },
+              "400": { "description": "Bad Request" },
+              "404": { "description": "Not Found" },
+              "500": { "description": "Internal Server Error" }
+            }
+          },
+          "put": {
+            "tags": ["Watchlists"],
+            "description": "Update a watchlist by ID",
+            "parameters": [
+              { "name": "id", "in": "path", "required": true, "type": "string" },
+              {
+                "name": "body",
+                "in": "body",
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user_id": { "example": "67fd2780e5c52f20916c2cc1" },
+                    "name": {"example": "Favorites to rewatch"},
+                    "movies": { "example": 
+                                [{"movie_id" : "67f24761070e027ef11d2805",
+                                "status": "Watched"} ] }
+                  }
+                }
+              }
+            ],
+            "responses": {
+              "200": { "description": "OK" },
+              "400": { "description": "Bad Request" },
+              "404": { "description": "Not Found" },
+              "500": { "description": "Internal Server Error" }
+            }
+          },
+          "delete": {
+            "tags": ["Watchlists"],
+            "description": "Delete a watchlist by ID",
+            "parameters": [
+              { "name": "id", "in": "path", "required": true, "type": "string" }
+            ],
+            "responses": {
+              "204": { "description": "No Content" },
+              "400": { "description": "Bad Request" },
+              "404": { "description": "Not Found" },
+              "500": { "description": "Internal Server Error" }
+            }
+          }
+    },
+
+
+
+
+
+
+    "/login": {
+      "get": {
+        "tags": ["Auth"],
+        "description": "User login",
+        "responses": {
+          "200": { "description": "Logged in successfully" },
+          "401": { "description": "Unauthorized" }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": ["Auth"],
+        "description": "User logout",
+        "responses": {
+          "200": { "description": "Logged out successfully" }
         }
       }
     }
   },
   "tags": [
-    {
-      "name": "Movies",
-      "description": "Endpoints related to movie actions"
-    },
-    {
-      "name": "Users",
-      "description": "Endpoints related to user actions"
-    }
+    { "name": "Movies", "description": "Endpoints related to movie actions" },
+    { "name": "Users", "description": "Endpoints related to user actions" },
+    { "name": "Reviews", "description": "Endpoints for reviews" },
+    { "name": "Watchlists", "description": "Endpoints for watchlists"},
+    { "name": "Auth", "description": "Authentication endpoints" }
   ]
 }
